--- a/FontKeyboardTest/Base.lproj/Main.storyboard
+++ b/FontKeyboardTest/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,43 +18,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IK0-AD-nfz" customClass="FontkeyboardtestInputView" customModule="FontKeyboardTest" customModuleProvider="target">
-                                <rect key="frame" x="67" y="28" width="240" height="200"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="Wt6-P6-RJG"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="icon" value=""/>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="fontColor">
-                                        <color key="value" red="0.0" green="0.64313725489999995" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap icon to change" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7fk-DB-Hra">
-                                <rect key="frame" x="115" y="236" width="145" height="21"/>
+                                <rect key="frame" x="115" y="248" width="145" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RO6-Fi-U98">
+                                <rect key="frame" x="87.5" y="40" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="0Ie-n5-g0r"/>
+                                    <constraint firstAttribute="width" constant="200" id="WMF-Nm-2KQ"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="EfC-Eh-Lel" kind="embed" identifier="embedIconPicker" id="cvS-R3-1lO"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="IK0-AD-nfz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="5ml-zj-bau"/>
-                            <constraint firstItem="7fk-DB-Hra" firstAttribute="top" secondItem="IK0-AD-nfz" secondAttribute="bottom" constant="8" id="S5E-V9-TDM"/>
-                            <constraint firstItem="IK0-AD-nfz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="WMW-Uf-pod"/>
+                            <constraint firstItem="RO6-Fi-U98" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="MWe-m8-gge"/>
+                            <constraint firstItem="RO6-Fi-U98" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="ddn-Br-uj9"/>
+                            <constraint firstItem="7fk-DB-Hra" firstAttribute="top" secondItem="RO6-Fi-U98" secondAttribute="bottom" constant="8" id="fGp-ME-RiV"/>
                             <constraint firstItem="7fk-DB-Hra" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kc2-Cc-NxR"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IK0-AD-nfz" secondAttribute="trailing" constant="68" id="m8J-Dp-4kw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <connections>
-                        <outlet property="fontInputControl" destination="IK0-AD-nfz" id="wUn-Px-WBd"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="53.600000000000001" y="26.53673163418291"/>
+        </scene>
+        <!--Icon Picker-->
+        <scene sceneID="Oal-gn-gMF">
+            <objects>
+                <viewController id="EfC-Eh-Lel" customClass="IconPicker" customModule="FontKeyboardTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="50f-wx-Inr">
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="njY-3H-kti" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="674" y="-157"/>
         </scene>
     </scenes>
 </document>
