--- a/FontKeyboardTest/Base.lproj/Main.storyboard
+++ b/FontKeyboardTest/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,29 +18,56 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap icon to change" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7fk-DB-Hra">
-                                <rect key="frame" x="115" y="248" width="145" height="21"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CnX-bq-ygP" customClass="IconPicker" customModule="FontKeyboardTest" customModuleProvider="target">
+                                <rect key="frame" x="137.5" y="60" width="100" height="100"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Jdz-7X-7xh"/>
+                                    <constraint firstAttribute="width" constant="100" id="jSH-GJ-YrF"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="iconColor">
+                                        <color key="value" red="1" green="0.22744107250000001" blue="0.2391653359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="iconString" value=""/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="iconChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="BQ2-bc-E6n"/>
+                                </connections>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I8p-xu-vLZ" customClass="IconPicker" customModule="FontKeyboardTest" customModuleProvider="target">
+                                <rect key="frame" x="137.5" y="170" width="100" height="100"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Ouw-Oq-KnG"/>
+                                    <constraint firstAttribute="width" constant="100" id="Tqs-ta-9sw"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="iconColor">
+                                        <color key="value" red="0.0" green="0.64313725489999995" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="iconString" value=""/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="iconChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="4ta-oj-yM5"/>
+                                </connections>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap icon to change" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jFN-MM-6aZ">
+                                <rect key="frame" x="115" y="289" width="145" height="47"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RO6-Fi-U98">
-                                <rect key="frame" x="87.5" y="40" width="200" height="200"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="0Ie-n5-g0r"/>
-                                    <constraint firstAttribute="width" constant="200" id="WMF-Nm-2KQ"/>
-                                </constraints>
-                                <connections>
-                                    <segue destination="EfC-Eh-Lel" kind="embed" identifier="embedIconPicker" id="cvS-R3-1lO"/>
-                                </connections>
-                            </containerView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="RO6-Fi-U98" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="MWe-m8-gge"/>
-                            <constraint firstItem="RO6-Fi-U98" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="ddn-Br-uj9"/>
-                            <constraint firstItem="7fk-DB-Hra" firstAttribute="top" secondItem="RO6-Fi-U98" secondAttribute="bottom" constant="8" id="fGp-ME-RiV"/>
-                            <constraint firstItem="7fk-DB-Hra" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kc2-Cc-NxR"/>
+                            <constraint firstItem="jFN-MM-6aZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3wk-2c-ldM"/>
+                            <constraint firstItem="I8p-xu-vLZ" firstAttribute="top" secondItem="CnX-bq-ygP" secondAttribute="bottom" constant="10" id="5jS-gm-bzQ"/>
+                            <constraint firstItem="CnX-bq-ygP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="Brx-lt-IkY"/>
+                            <constraint firstItem="CnX-bq-ygP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="E2H-x0-x5b"/>
+                            <constraint firstItem="I8p-xu-vLZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="H1l-Ro-dyT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jFN-MM-6aZ" secondAttribute="bottom" constant="331" id="iYg-rS-3vG"/>
+                            <constraint firstItem="jFN-MM-6aZ" firstAttribute="top" secondItem="I8p-xu-vLZ" secondAttribute="bottom" constant="19" id="ikf-kk-52i"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -48,20 +75,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="53.600000000000001" y="26.53673163418291"/>
-        </scene>
-        <!--Icon Picker-->
-        <scene sceneID="Oal-gn-gMF">
-            <objects>
-                <viewController id="EfC-Eh-Lel" customClass="IconPicker" customModule="FontKeyboardTest" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="50f-wx-Inr">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="njY-3H-kti" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="674" y="-157"/>
         </scene>
     </scenes>
 </document>
